{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "cca0cc3c-23c7-46a3-a322-22459fe6de33",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "cb3386a9-0a16-49c9-b47b-d6b5a26be504",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "ff2cd4bd-58a8-47c4-902a-a13a0799acc3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SwitchSkill",
                    "type": "Button",
                    "id": "175ba7e9-932b-448b-8399-8fcfb5dda767",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseSkill",
                    "type": "Button",
                    "id": "473651e5-93fc-402d-8e93-15ae40a58e23",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d6b3aa42-7185-42b9-b5ec-91964dd9d62b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3eb0f92-4355-4a10-8561-ea8d22996e69",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "Scale(factor=-1)",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "adf39c77-9aa5-4ae7-b261-7e25c431573c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "Scale(factor=-1)",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ebede4e-acdb-4075-aefd-ff78139e6ccd",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "463f5c5a-da03-4a50-9eea-ff71a5a6cbe7",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "Scale(factor=-1)",
                    "groups": "",
                    "action": "SwitchSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4ea581c-bd88-450b-b2c7-6807376d88da",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "SwitchSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1bc6640-5cf8-4619-b814-ee70d4de2102",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}